--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -7,21 +7,33 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 8px;
 }
 
 .title {
+  padding: 8px;
+  font-size: 16px;
   background: #e3f4ff;
 }
 
 .content {
+  
+  padding: 16px 8px;
+  margin-top: 0px;
+  margin-bottom: 8px;
   background: #e3f4ff;
 }
 
 .button-container {
+  text-align: center;
+  padding: 8px;
   background: #e3f4ff;
 }
 
 button {
+  display: block;
+  margin: auto;
+  padding: 8px 24px;
   background: white;
   border: 1px solid #eee;
 }
